Bug 1045752 - Change ScopedXErrorHandler assert to warn; r=karlt